# mem-info

./: .envrc  ChangeLog.md  LICENSE  README.md  cabal.project  default.nix  h8x.nix  hs-core-mem.cabal  hs-mem-info.cabal  mem-info.cabal  shell.nix  static.nix  sync_nix.sh
.github/workflows/: cabal.yml  nix-ci.yml
exe/: CmdLine.hs  PrintMem.hs
src/System/: MemInfo.hs
src/System/MemInfo/: Choices.hs  Prelude.hs  Print.hs  Proc.hs  SysInfo.hs
src/System/Process/: CoreMem.hs
src/System/Process/CoreMem/: Choices.hs  Prelude.hs
test/: Spec.hs
test/MemInfo/: ChoicesSpec.hs  MemInfoSpec.hs  OrphanInstances.hs  PrintSpec.hs  ProcSpec.hs  SysInfoSpec.hs
test/MemInfo/Files/: Root.hs  Smap.hs
test/Process/: CoreMemSpec.hs
