cabal-version:      3.0
name:               hs-core-mem
version:            0.1.0.0
synopsis:           A terse description of this package
description:
  Expands on the terse description above; here is how to do a link [TmpProc](https://hackage.haskell.org/package/tmp-proc-0.5.3.0/docs/System-TmpProc.html)

  - a fine point
  - an even better one

license:            BSD-3-Clause
license-file:       LICENSE
author:             Tim Emiola
maintainer:         adetokunbo@emio.la
category:           Web
homepage:           https://github.com/adetokunbo/hs-core-mem#readme
bug-reports:
  https://github.com/adetokunbo/hs-core-mem/issues

build-type:         Simple
extra-source-files:
  ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/adetokunbo/hs-core-mem.git

library
  exposed-modules:  System.Process.CoreMem
  hs-source-dirs:   src
  build-depends:
    , base                        >=4.10 && <5
    , hspec                       >=2.7.0 && <2.12.0

  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    Process.CoreMemSpec
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:
    , base
    , hspec           >=2.1
    , QuickCheck
    , hs-core-mem

Flag build-the-readme
  description: Allow the readme to build
  default:     False


test-suite readme
  if os(windows) || !flag(build-the-readme)
    buildable: False
  else
    buildable: True

  build-tool-depends: markdown-unlit:markdown-unlit
  type:             exitcode-stdio-1.0
  ghc-options:        -pgmL markdown-unlit -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-patterns -Wpartial-fields
  main-is:            README.lhs
  default-language:   Haskell2010
  build-depends:
    , base
    , hs-core-mem
    , hspec
