cabal-version:      3.0
name:               hs-core-mem
version:            0.1.0.0
synopsis:           Report the core memory usage of a program
description:
  A utility to accurately report the core memory usage of a program
  This is a clone of
  [ps_mem](https://github.com/pixelb/ps_mem/blob/master/README.md) the python
  utility
  The package provides
  * an executable that mimics *ps_mem*
  * a library that can to provide similar functionality within haskell programs

license:            BSD-3-Clause
license-file:       LICENSE
author:             Tim Emiola
maintainer:         adetokunbo@emio.la
category:           Web
homepage:           https://github.com/adetokunbo/hs-core-mem#readme
bug-reports:        https://github.com/adetokunbo/hs-core-mem/issues
build-type:         Simple
extra-source-files: ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/adetokunbo/hs-core-mem.git

library
  exposed-modules:  System.Process.CoreMem
                    System.Process.CoreMem.Choices
                    System.Process.CoreMem.Prelude
  hs-source-dirs:   src
  build-depends:
    , base                  >=4.14   && <5
    , bytestring
    , containers
    , directory
    , filepath
    , fmt
    , hashable
    , hspec                 >=2.7.0  && <2.12.0
    , optparse-applicative  >=0.18.1 && <0.19
    , text
    , unix

  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    Process.CoreMemSpec
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:
    , base
    , hs-core-mem
    , hspec        >=2.1
    , QuickCheck

-- cmdline runs the hs-core-mem command
executable core-mem
  main-is:          CmdLine.hs
  hs-source-dirs:   exe
  default-language: Haskell2010
  build-depends:
    , base               >=4.14     && <5
    , hs-core-mem
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  ghc-options:      -O
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs
