cabal-version:      3.0
name:               hs-mem-info
version:            0.1.0.0
synopsis:           Print the core memory usage of programs
description:
  A utility to accurately report the core memory usages of programs
  This is a clone of
  [ps_mem](https://github.com/pixelb/ps_mem/blob/master/README.md) the python
  utility
  The package provides
  * an executable command `printmem` that mimics *ps_mem*
  * a haskell library to allow use of similar functionality within haskell programs

license:            BSD-3-Clause
license-file:       LICENSE
author:             Tim Emiola
maintainer:         adetokunbo@emio.la
category:           Web
homepage:           https://github.com/adetokunbo/hs-mem-info#readme
bug-reports:        https://github.com/adetokunbo/hs-mem-info/issues
build-type:         Simple
extra-source-files: ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/adetokunbo/hs-mem-info.git

library
  exposed-modules:  System.MemInfo
                    System.MemInfo.Choices
                    System.MemInfo.Prelude
                    System.MemInfo.Proc
                    System.MemInfo.Print
                    System.MemInfo.SysInfo
  hs-source-dirs:   src
  build-depends:
    , base                  >=4.14   && <5
    , bytestring
    , containers
    , directory
    , filepath
    , fmt
    , hashable
    , optparse-applicative  >=0.18.1 && <0.19
    , text
    , unix
    , validity
    , validity-text

  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    MemInfo.OrphanInstances
                    MemInfo.ProcSpec
                    MemInfo.SysInfoSpec
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:
    , base
    , fmt
    , hs-mem-info
    , hspec        >=2.1 && <2.11
    , genvalidity
    , genvalidity-text
    , genvalidity-hspec
    , QuickCheck
    , text

-- printmem is the printmem command
executable printmem
  main-is:          PrintMem.hs
  hs-source-dirs:   exe
  default-language: Haskell2010
  build-depends:
    , base               >=4.14     && <5
    , hs-mem-info
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs
